# H-Swarm

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  .gitignore  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  main.py  models.py  pipeline.py  schemas.py
apps/api/tests/: test_api.py  test_api_flow.py  test_stage_gating.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  contracts.ts  styles.css  types.ts
apps/web/src/api/: client.ts  healthtwin.ts
apps/web/src/components/: ActionScenarioBoard.tsx  ConflictMatrix.tsx  ExecutiveDashboard.tsx  KpiTable.tsx  MemoView.tsx  MitigationComparison.tsx  RiskHeatmap.tsx  StakeholderGraphPreview.tsx  StepRail.tsx  TimelineView.tsx  TopNav.tsx
apps/web/src/data/: demo.ts
apps/web/src/views/: AssumptionReviewView.tsx  EvidenceReviewView.tsx  MemoWorkspaceView.tsx  NewDecisionRunView.tsx  ProjectsView.tsx  ScenarioLabView.tsx  StakeholderMapView.tsx
docs/: architecture-note.md  live-demo-script.md  operator-workflow.md  positioning-brief.md  product-overview.md  technical-setup.md  video-storyboard.md
